--- a/index.html
+++ b/index.html
@@ -770,21 +770,24 @@
     <div class="container">
         <h2 class="section-title gradient-text">Get In Touch</h2>
         <div class="contact-content">
-            <form>
+            <form action="https://api.web3forms.com/submit" method="POST">
                 <div class="form-group">
                     <label for="name">Name</label>
-                    <input type="text" id="name" required>
+                    <input class="input-box" type="text" name="name" placeholder="Your Name" required>
                 </div>
                 <div class="form-group">
                     <label for="email">Email</label>
-                    <input type="email" id="email" required>
+                    <input class="input-box" type="email" name="email" placeholder="Your Email" required>
                 </div>
                 <div class="form-group">
                     <label for="message">Message</label>
-                    <textarea id="message" rows="5" required></textarea>
+                    <textarea name="message" class="input-box" placeholder="Your Message" required></textarea>
                 </div>
-                <button type="submit" class="cta-button magnetic">Send Message</button>
+                <input type="hidden" name="redirect" value="https://web3forms.com/success">
+                <input type="hidden" name="apikey" value="4208f7c8-4df4-4169-905a-04cf110c8488">
+                <button type="submit" class="cta-button magnetic">Submit Form</button>
             </form>
+
         </div>
     </div>
 </section>
