--- a/index.html
+++ b/index.html
@@ -807,112 +807,152 @@
 
 <script>
     // Header scroll effect
-    window.addEventListener('scroll', function() {
-        const header = document.querySelector('header');
-        if (window.scrollY > 50) {
-            header.classList.add('scrolled');
-        } else {
-            header.classList.remove('scrolled');
+window.addEventListener('scroll', function() {
+    const header = document.querySelector('header');
+    if (window.scrollY > 50) {
+        header.classList.add('scrolled');
+    } else {
+        header.classList.remove('scrolled');
+    }
+});
+
+// Mobile menu
+const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
+const navLinks = document.querySelector('.nav-links');
+const overlay = document.querySelector('.overlay');
+
+mobileMenuBtn.addEventListener('click', function() {
+    navLinks.classList.toggle('active');
+    overlay.classList.toggle('active');
+});
+
+overlay.addEventListener('click', function() {
+    navLinks.classList.remove('active');
+    overlay.classList.remove('active');
+});
+
+// Smooth scrolling
+document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+    anchor.addEventListener('click', function(e) {
+        e.preventDefault();
+
+        const target = document.querySelector(this.getAttribute('href'));
+
+        if (target) {
+            window.scrollTo({
+                top: target.offsetTop - 100,
+                behavior: 'smooth'
+            });
         }
-    });
 
-    // Mobile menu
-    const mobileMenuBtn = document.querySelector('.mobile-menu-btn');
-    const navLinks = document.querySelector('.nav-links');
-    const overlay = document.querySelector('.overlay');
-
-    mobileMenuBtn.addEventListener('click', function() {
-        navLinks.classList.toggle('active');
-        overlay.classList.toggle('active');
-    });
-
-    overlay.addEventListener('click', function() {
+        // Close mobile menu if open
         navLinks.classList.remove('active');
         overlay.classList.remove('active');
     });
+});
 
-    // Smooth scrolling
-    document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function(e) {
-            e.preventDefault();
+// Magnetic effect
+const magneticItems = document.querySelectorAll('.magnetic');
 
-            const target = document.querySelector(this.getAttribute('href'));
+magneticItems.forEach(item => {
+    item.addEventListener('mousemove', function(e) {
+        const bounds = this.getBoundingClientRect();
+        const mouseX = e.clientX;
+        const mouseY = e.clientY;
+        const centerX = bounds.left + bounds.width / 2;
+        const centerY = bounds.top + bounds.height / 2;
+        const deltaX = mouseX - centerX;
+        const deltaY = mouseY - centerY;
 
-            if (target) {
-                window.scrollTo({
-                    top: target.offsetTop - 100,
-                    behavior: 'smooth'
-                });
+        const maxMove = 10;
+        const moveX = (deltaX / bounds.width) * maxMove;
+        const moveY = (deltaY / bounds.height) * maxMove;
+
+        this.style.transform = `translate(${moveX}px, ${moveY}px)`;
+    });
+
+    item.addEventListener('mouseleave', function() {
+        this.style.transform = 'translate(0px, 0px)';
+    });
+});
+
+// Cursor glow effect
+const glow = document.querySelector('.glow');
+
+document.addEventListener('mousemove', function(e) {
+    glow.style.left = e.clientX + 'px';
+    glow.style.top = e.clientY + 'px';
+    glow.style.opacity = '1';
+});
+
+document.addEventListener('mouseleave', function() {
+    glow.style.opacity = '0';
+});
+
+// Intersection Observer for fade-in animations
+const observerOptions = {
+    root: null,
+    rootMargin: '0px',
+    threshold: 0.1
+};
+
+const observer = new IntersectionObserver((entries, observer) => {
+    entries.forEach(entry => {
+        if (entry.isIntersecting) {
+            if (!entry.target.classList.contains('fade-in')) {
+                entry.target.classList.add('fade-in');
             }
-
-            // Close mobile menu if open
-            navLinks.classList.remove('active');
-            overlay.classList.remove('active');
-        });
-    });
-
-    // Magnetic effect
-    const magneticItems = document.querySelectorAll('.magnetic');
-
-    magneticItems.forEach(item => {
-        item.addEventListener('mousemove', function(e) {
-            const bounds = this.getBoundingClientRect();
-            const mouseX = e.clientX;
-            const mouseY = e.clientY;
-            const centerX = bounds.left + bounds.width / 2;
-            const centerY = bounds.top + bounds.height / 2;
-            const deltaX = mouseX - centerX;
-            const deltaY = mouseY - centerY;
-
-            const maxMove = 10;
-            const moveX = (deltaX / bounds.width) * maxMove;
-            const moveY = (deltaY / bounds.height) * maxMove;
-
-            this.style.transform = `translate(${moveX}px, ${moveY}px)`;
-        });
-
-        item.addEventListener('mouseleave', function() {
-            this.style.transform = 'translate(0px, 0px)';
-        });
-    });
-
-    // Cursor glow effect
-    const glow = document.querySelector('.glow');
-
-    document.addEventListener('mousemove', function(e) {
-        glow.style.left = e.clientX + 'px';
-        glow.style.top = e.clientY + 'px';
-        glow.style.opacity = '1';
-    });
-
-    document.addEventListener('mouseleave', function() {
-        glow.style.opacity = '0';
-    });
-
-    // Intersection Observer for fade-in animations
-    const observerOptions = {
-        root: null,
-        rootMargin: '0px',
-        threshold: 0.1
-    };
-
-    const observer = new IntersectionObserver((entries, observer) => {
-        entries.forEach(entry => {
-            if (entry.isIntersecting) {
-                if (!entry.target.classList.contains('fade-in')) {
-                    entry.target.classList.add('fade-in');
-                }
-                observer.unobserve(entry.target);
-            }
-        });
-    }, observerOptions);
-
-    document.querySelectorAll('.section-title, .project-card, .about-text h3, .about-text p, .skills, .contact-content, .stat-item').forEach(el => {
-        if (el.classList.contains('fade-in')) {
-            el.classList.remove('fade-in');
+            observer.unobserve(entry.target);
         }
-        observer.observe(el);
     });
+}, observerOptions);
+
+document.querySelectorAll('.section-title, .project-card, .about-text h3, .about-text p, .skills, .contact-content, .stat-item').forEach(el => {
+    if (el.classList.contains('fade-in')) {
+        el.classList.remove('fade-in');
+    }
+    observer.observe(el);
+});
+
+/* ==============================
+   INSPECTION PREVENTION CODE
+   ============================== */
+(function () {
+    // Disable Right-Click
+    document.addEventListener("contextmenu", function (event) {
+        event.preventDefault();
+    });
+
+    // Disable DevTools Shortcuts
+    document.addEventListener("keydown", function (event) {
+        if (event.key === "F12" || 
+            (event.ctrlKey && event.shiftKey && (event.key === "I" || event.key === "J")) || 
+            (event.ctrlKey && event.key === "U")) {
+            event.preventDefault();
+        }
+    });
+
+    // Detect DevTools via Window Size Change
+    setInterval(function () {
+        if (window.outerHeight - window.innerHeight > 200 || window.outerWidth - window.innerWidth > 200) {
+            document.body.innerHTML = "Developer tools detected! Please close them.";
+        }
+    }, 1000);
+
+    // Prevent Console Inspection (Debugger Trick)
+    function detectDevTools() {
+        const element = new Image();
+        Object.defineProperty(element, "id", {
+            get: function () {
+                alert("Developer tools detected! Please close them.");
+                window.location.reload();
+            }
+        });
+        console.log("%c", element);
+    }
+    detectDevTools();
+})();
+
 </script>
 </body>
 </html>
