--- a/index.html
+++ b/index.html
@@ -682,7 +682,7 @@
     <div class="container">
         <div class="hero-content">
             <p class="hero-subtitle fade-in">Frontend Developer</p>
-            <h1 class="hero-title fade-in delay-1">Creating digital experiences.</h1>
+            <h1 class="hero-title fade-in delay-1">Creating Future Of The Web.</h1>
             <p class="hero-description fade-in delay-2">17-year-old developer with 2+ years of experience crafting intuitive and visually stunning web solutions in Finland.</p>
             <a href="#projects" class="cta-button fade-in delay-3 magnetic">Explore My Work</a>
         </div>
