--- a/index.html
+++ b/index.html
@@ -681,9 +681,9 @@
 <section class="hero">
     <div class="container">
         <div class="hero-content">
-            <p class="hero-subtitle fade-in">Frontend Developer</p>
-            <h1 class="hero-title fade-in delay-1">Creating Future Of The Web.</h1>
-            <p class="hero-description fade-in delay-2">17-year-old developer with 2+ years of experience crafting intuitive and visually stunning web solutions in Finland.</p>
+            <p class="hero-subtitle fade-in">Software Developer</p>
+            <h1 class="hero-title fade-in delay-1">Building Digital Solutions.</h1>
+            <p class="hero-description fade-in delay-2">17-year-old software developer with 2+ years of experience building software applications and systems from Finland.</p>
             <a href="#projects" class="cta-button fade-in delay-3 magnetic">Explore My Work</a>
         </div>
     </div>
@@ -698,17 +698,20 @@
         <h2 class="section-title gradient-text">About Me</h2>
         <div class="about-content">
             <div class="about-text">
-                <h3>Young developer with a passion for frontend.</h3>
-                <p>At just 17 years old, I've already accumulated over 2 years of experience in frontend development. My journey started with a curiosity about how websites work, and quickly evolved into a passion for creating beautiful, intuitive digital experiences.</p>
-                <p>Based in Finland, I'm constantly exploring new technologies and design trends to enhance my skills and deliver exceptional results that exceed expectations.</p>
+                <h3>Driven software developer with a full-stack perspective.</h3>
+                <p>At just 17 years old, I've gained over 2 years of experience crafting digital solutions from front-end to backend. My curiosity for how systems work grew into a mission to build scalable and efficient software using modern tools.</p>
+                <p>Based in Finland, I enjoy designing architecture, working with APIs, and writing clean, modular code. I'm always exploring new stacks to elevate my craft.</p>
                 <div class="skills">
                     <span class="skill-tag">HTML5</span>
                     <span class="skill-tag">CSS3</span>
                     <span class="skill-tag">JavaScript</span>
                     <span class="skill-tag">React</span>
-                    <span class="skill-tag">Responsive Design</span>
-                    <span class="skill-tag">UI/UX</span>
+                    <span class="skill-tag">Typescript</span>
+                    <span class="skill-tag">Python</span>
+                    <span class="skill-tag">Node.js</span>
+                    <span class="skill-tag">Git</span>
                 </div>
+
             </div>
             <div class="about-stats">
                 <div class="stat-item magnetic">
