--- a/index.html
+++ b/index.html
@@ -740,8 +740,10 @@
                     <span>01</span>
                 </div>
                 <div class="project-info">
-                    <h3 class="project-title">E-commerce Platform</h3>
-                    <p class="project-description">A modern e-commerce platform with responsive design and intuitive user interface.</p>
+                    <h3 class="project-title">FocusFlow</h3>
+                    <p class="project-description">
+                        A stylish productivity timer built with JavaScript. Includes Pomodoro sessions, break intervals, progress tracking, and a stats dashboard that visualizes daily focus time using Chart.js.
+                    </p>
                     <a href="#" class="project-link">View Project →</a>
                 </div>
             </div>
@@ -750,8 +752,8 @@
                     <span>02</span>
                 </div>
                 <div class="project-info">
-                    <h3 class="project-title">Portfolio Template</h3>
-                    <p class="project-description">A clean and minimal portfolio template designed for creative professionals.</p>
+                    <h3 class="project-title">Crypto Tracker</h3>
+                    <p class="project-description">A real-time crypto dashboard showing live prices and trends using public APIs.</p>
                     <a href="#" class="project-link">View Project →</a>
                 </div>
             </div>
@@ -760,8 +762,10 @@
                     <span>03</span>
                 </div>
                 <div class="project-info">
-                    <h3 class="project-title">Weather Dashboard</h3>
-                    <p class="project-description">A sleek weather application with real-time data and interactive features.</p>
+                    <h3 class="project-title">DarkDocs</h3>
+                    <p class="project-description">
+                        A clean and minimal dark-mode Markdown editor with live preview, autosave, and keyboard shortcuts — ideal for distraction-free writing and note-taking.
+                    </p>
                     <a href="#" class="project-link">View Project →</a>
                 </div>
             </div>
