--- a/index.html
+++ b/index.html
@@ -753,7 +753,9 @@
                 </div>
                 <div class="project-info">
                     <h3 class="project-title">Crypto Tracker</h3>
-                    <p class="project-description">A real-time crypto dashboard showing live prices and trends using public APIs.</p>
+                    <p class="project-description">
+                        A sleek web app that fetches real-time cryptocurrency data using the CoinGecko API. Displays live prices, 24h change, market caps, and mini sparkline charts. Includes a search filter, currency selector, and responsive table layout. Built with vanilla JavaScript and styled for dark mode.
+                    </p>
                     <a href="#" class="project-link">View Project →</a>
                 </div>
             </div>
@@ -772,6 +774,7 @@
         </div>
     </div>
 </section>
+
 
 <section id="contact" class="section">
     <div class="container">
