--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                 <div class="project-info">
                     <h3 class="project-title">Crypto Tracker</h3>
                     <p class="project-description">
-                        A sleek web app that fetches real-time cryptocurrency data using the CoinGecko API. Displays live prices, 24h change, market caps, and mini sparkline charts.
+                        A sleek web app that fetches real-time cryptocurrency data using the CoinGecko API. Displays live prices, 24h change, market caps, and mini sparkline charts. Also Includes currency selector and search filter.
                     </p>
                     <a href="#" class="project-link">View Project →</a>
                 </div>
