--- a/index.html
+++ b/index.html
@@ -672,6 +672,7 @@
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
                 <a href="#contact">Contact</a>
+                <a href="reviews.html">Reviews</a>
             </div>
             <button class="mobile-menu-btn">☰</button>
         </nav>
