--- a/reviews.html
+++ b/reviews.html
@@ -196,7 +196,30 @@
             <div id="back" onclick="window.history.back();">← Back</div>
             <h1>MY REVIEWS</h1>
         </header>
-
+        <div class="reviews-grid">
+            <div class="review-card">
+                <div class="review-header">
+                    <div class="avatar">AL</div>
+                    <div class="reviewer-info">
+                        <div class="reviewer-name">Alayna</div>
+                        <div class="reviewer-title">High School Student</div>
+                    </div>
+                </div>
+                <div class="rating">
+                    <div class="star">★</div>
+                    <div class="star">★</div>
+                    <div class="star">★</div>
+                    <div class="star">★</div>
+                    <div class="star">★</div>
+                </div>
+                <div class="review-date">April 26, 2025</div>
+                <div class="review-text">
+                    "Sami is an outstanding instructor. His teaching methods in Python are exceptionally effective, combining clarity, structure, and depth. Thanks to his clear explanations, I was able to fully understand every concept with ease."
+                </div>
+                <div class="review-tech">
+                    <span class="tech-tag">Python</span>
+                </div>
+            </div>
     <script>
         // Simple animation for the review cards on page load
         document.addEventListener('DOMContentLoaded', () => {
