--- a/reviews.html
+++ b/reviews.html
@@ -201,7 +201,7 @@
                 <div class="review-header">
                     <div class="avatar">AL</div>
                     <div class="reviewer-info">
-                        <div class="reviewer-name">Alayna</div>
+                        <div class="reviewer-name">Lay</div>
                         <div class="reviewer-title">High School Student</div>
                     </div>
                 </div>
