--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sami's portfolio showcasing frontend development projects and skills.">
+    <meta name="keywords" content="Frontend Developer, JavaScript, HTML, CSS, Python, Portfolio, Sami">
     <title>Sami • Software Developer</title>
     <style>
         :root {
