--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
     <style>
         /*make sure that the colors are good contrast WCAG 2.1*/
     :root {
-        --primary: #8A2EFF;       /* Deeper purple for better contrast on dark backgrounds */
-        --secondary: #00C4CC;     /* Darker cyan for contrast without losing vibrancy */
+        --primary: #6B21A8;      /* Deep purple for better contrast */
+        --primary-light: #8A2EFF;
+        --secondary: #007D8A;     /* Darker cyan for better contrast */
+        --secondary-light: #00C4CC;
         --dark: #0A0A0A;          /* Base dark background */
-        --light: #FAFAFA;         /* Near white for light text */
-        --gray: #B0B0B0;          /* Lighter gray for readability on dark backgrounds */
-        --card-bg: #141425;       /* Slightly lighter than original to separate layers */
+        --light: #FFFFFF;         /* Pure white for maximum contrast */
+        --gray: #666666;          /* Medium gray for better readability */
+        --card-bg: #1A1A2E;       /* Darker card background for better separation */
+        --accent: #FF6B6B;        /* Red accent for calls-to-action */
         --gradient: linear-gradient(135deg, var(--primary), var(--secondary));
         --transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+        --border-radius: 12px;
+        --shadow-sm: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+        --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
     }
 
 
@@ -33,6 +40,9 @@
             color: var(--light);
             line-height: 1.6;
             overflow-x: hidden;
+            font-size: 16px;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
 
         .container {
@@ -84,6 +94,9 @@
             font-weight: 500;
             transition: var(--transition);
             position: relative;
+            padding: 8px 12px;
+            border-radius: var(--border-radius);
+            backdrop-filter: blur(4px);
         }
 
         .nav-links a::after {
@@ -95,10 +108,16 @@
             height: 2px;
             background: var(--gradient);
             transition: var(--transition);
+            border-radius: 1px;
         }
 
         .nav-links a:hover::after {
             width: 100%;
+            transform: scaleX(1.2);
+        }
+
+        .nav-links a:hover {
+            transform: translateY(-2px);
         }
 
         .hero {
