--- a/reviews.html
+++ b/reviews.html
@@ -220,6 +220,29 @@
                     <span class="tech-tag">Python</span>
                 </div>
             </div>
+
+            <div class="review-card">
+                <div class="review-header">
+                    <div class="avatar">RD</div>
+                    <div class="reviewer-info">
+                        <div class="reviewer-name">Radhika</div>
+                        <div class="reviewer-title">College Student</div>
+                    </div>
+                </div>
+                <div class="rating">
+                    <div class="star">★</div>
+                    <div class="star">★</div>
+                    <div class="star">★</div>
+                    <div class="star">★</div>
+                </div>
+                <div class="review-date">June 30, 2025</div>
+                <div class="review-text">
+                    "Sami made programming genuinely fun through project-based learning. He explained concepts with clarity and encouraged exploring different ways to approach the same problem. His emphasis on mastering basics and writing clean, structured code made him one of the best mentors I've had."
+                </div>
+                <div class="review-tech">
+                    <span class="tech-tag">Python</span>
+                </div>
+            </div>
     <script>
         // Simple animation for the review cards on page load
         document.addEventListener('DOMContentLoaded', () => {
