--- a/reviews.html
+++ b/reviews.html
@@ -225,7 +225,7 @@
                 <div class="review-header">
                     <div class="avatar">RD</div>
                     <div class="reviewer-info">
-                        <div class="reviewer-name">Radhika</div>
+                        <div class="reviewer-name">Drac</div>
                         <div class="reviewer-title">College Student</div>
                     </div>
                 </div>
