--- a/reviews.html
+++ b/reviews.html
@@ -223,7 +223,7 @@
 
             <div class="review-card">
                 <div class="review-header">
-                    <div class="avatar">RD</div>
+                    <div class="avatar">DR</div>
                     <div class="reviewer-info">
                         <div class="reviewer-name">Drac</div>
                         <div class="reviewer-title">College Student</div>
